refactor(page): 一些页面的小细节调整

--- a/src/layouts/IndividualPage.astro
+++ b/src/layouts/IndividualPage.astro
@@ -24,7 +24,7 @@ const socialImage = heroImage?.src ?? config.socialCard
 ---
 
 <PageLayout meta={{ title, description, ogImage: socialImage }}>
-  <Button title='Back' href={back ?? '/'} variant='back' />
+  <Button title='返回' href={back ?? '/'} variant='back' />
   <main class='mt-6 items-start gap-x-10 md:flex lg:mt-10'>
     {
       !!headings.length && (
