--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,16 +18,26 @@ const backend = ['Gin', 'ThinkPHP', 'Laravel', 'Webman']
 const MAX_POSTS = 10
 const allPosts = await getBlogCollection()
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
+
+const imagePath = config.logo.src
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  '/src/assets/*.{jpeg,jpg,png,gif,avif,webp}'
+)
+if (!images[imagePath])
+  throw new Error(
+    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,avif,webp}"`
+  )
 ---
 
 <PageLayout meta={{ title: '首页' }} highlightColor='#5EA88A'>
   <main class='flex w-full flex-col items-center'>
     <section class='animate mb-10 flex flex-col items-center gap-y-7' id='content-header'>
-      <Image
-        src={avatar}
-        alt='profile'
+     <Image
+        src={images[imagePath]()}
+        alt={config.logo.alt || 'Profile'}
         class='h-28 w-auto rounded-full border p-1'
         loading='eager'
+        fetchpriority='high'
       />
 
       <div class='flex flex-col items-center gap-y-4'>
