refactor(project): 项目展示调整

--- a/src/components/projects/ProjectSection.astro
+++ b/src/components/projects/ProjectSection.astro
@@ -96,7 +96,7 @@ const projectIconSet: Record<string, iconsType> = {
                 })}
               </div>
               {project.links.some((link) => link.type === 'site') && (
-                <StarIcon class='size-20 z-0 text-muted absolute right-1 top-1' slot='before' />
+                <StarIcon class='size-20 z--1 text-card absolute right-1 top-1' slot='before' />
               )}
             </div>
           </div>
