refactor(sponsors): 赞助列表调整

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -308,7 +308,7 @@ const { sponsorship } = sponsorshipData
     ]}
   />
   <p>感谢这些支持我的朋友:</p>
-  <Sponsors sponsors={sponsorship} />
+  <Sponsors sponsors={sponsorship} progressMax={30} />
 </PageLayout>
 
 <style>
