--- a/src/components/projects/ProductDelivery.astro
+++ b/src/components/projects/ProductDelivery.astro
@@ -21,19 +21,17 @@ function shuffle(arr: friend[]) {
 }
 
 interface Props {
-  title?: string
   list: friend_list
 }
-const { title, list: friendList, ...props } = Astro.props
+const { list: friendList, ...props } = Astro.props
 ---
 
-{title && <h2 id={friendList.id_name}>{title}</h2>}
-<div class='grid gap-3.5 sm:grid-cols-2 sm:gap-4 lg:grid-cols-3' {...props}>
+<div class='flex w-full flex-col items-center gap-4' {...props}>
   {
     friendList.link_list.length > 0 ? (
       shuffle(friendList.link_list).map((frd: friend) => (
-        <a href={frd.link} target='_blank' class='no-underline'>
-          <div class='group relative h-full overflow-hidden rounded-2xl border bg-background px-2.5 py-1.5 transition-colors hover:bg-muted sm:px-4 sm:py-2'>
+        <a href={frd.link} target='_blank' class='no-underline w-full'>
+          <div class='group relative h-full overflow-hidden rounded-2xl border px-2.5 py-1.5 transition-colors sm:px-4 sm:py-2'>
             <div class='relative z-10 flex h-full items-center gap-3'>
               {/* avatar */}
               <div class='relative h-14 w-14 min-w-14 overflow-hidden rounded-full'>
