perf(assets): :zap: reduce image size to improve index page loading time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,25 +153,25 @@ if (!images[imagePath])
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
             subheading='Do not go gentle into that good night'
-            imagePath='/src/assets/projects/1.jpg'
+            imagePath='/src/assets/projects/1.avif'
           />
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
             subheading='Old age burn and rave at close of day'
-            imagePath='/src/assets/projects/2.jpg'
+            imagePath='/src/assets/projects/2.avif'
           />
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
             subheading='Rage, rage against the dying of the light'
-            imagePath='/src/assets/projects/3.jpg'
+            imagePath='/src/assets/projects/3.avif'
           />
           <ProjectCard
             href='/projects'
             heading='More projects'
             subheading='Check out more projects'
-            imagePath='/src/assets/projects/4.jpg'
+            imagePath='/src/assets/projects/4.avif'
           />
         </div>
       </Section>
