feat(components): :lipstick: remove waline meta tag

--- a/src/components/waline/Comment.astro
+++ b/src/components/waline/Comment.astro
@@ -55,6 +55,12 @@ const { class: className } = Astro.props
   if (walineConfig.enable) customElements.define('comment-component', Comment)
 </script>
 
+{
+  config.integ.waline.showMeta &&(
+    <style> #waline :global(.wl-meta) { display: none; } </style>
+  )
+}
+
 <style>
   /* Basic theme */
   #waline {
