feat(projects): 增加项目

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -54,6 +54,15 @@ const { sponsorship } = sponsorshipData
         ]
       },
       {
+        name: '手机号归属地查询',
+        description: '完全离线的手机号归属地查询桌面应用，适合在内网、单机、隔离环境下使用，内置 483,709 个号段​',
+        links: [
+          { type: 'doc', href: '/blog/id81jf9d' },
+          { type: 'github', href: 'https://github.com/zxc7563598/go-mobile-locator' },
+          { type: 'release', href: 'https://github.com/zxc7563598/go-mobile-locator/releases' }
+        ]
+      },
+      {
         name: 'FinBoard',
         description: '基于 Go 实现的个人财务应用，支持账单记录、分类统计与数据分析',
         links: [
