--- a/src/components/links/FriendList.astro
+++ b/src/components/links/FriendList.astro
@@ -23,7 +23,7 @@ interface friend_list {
 }
 
 function shuffle(arr: friend[]) {
-  return arr.sort(function () {
+  return arr.sort(() => {
     return Math.random() - 0.5
   })
 }
