--- a/src/pages/docs/[...id].astro
+++ b/src/pages/docs/[...id].astro
@@ -1,5 +1,5 @@
 ---
-import { render, type CollectionEntry } from 'astro:content'
+import { type CollectionEntry, render } from 'astro:content'
 
 import { MediumZoom } from 'astro-pure/advanced'
 import { TOC } from 'astro-pure/components/pages'
