--- a/packages/pure/components/pages/PFSearch.astro
+++ b/packages/pure/components/pages/PFSearch.astro
@@ -34,7 +34,7 @@ import '@pagefind/default-ui/css/ui.css'
           new PagefindUI({
             element: '#site-search',
             baseUrl: import.meta.env.BASE_URL,
-            bundlePath: import.meta.env.BASE_URL.replace(/\/$/, '') + '/pagefind/',
+            bundlePath: `${import.meta.env.BASE_URL.replace(/\/$/, '')}/pagefind/`,
             showImages: false,
             showSubResults: true,
             processResult: (result: { url: string; sub_results: Array<{ url: string }> }) => {
