style(layouts): add commment for safe area support

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -64,6 +64,8 @@ const {
           hsl(var(--primary) / var(--un-text-opacity))
         ) !important;
       }
+
+      /* Extend safe area for some special screens */
       #main-container {
         padding-top: env(safe-area-inset-top);
         padding-left: calc(1rem + env(safe-area-inset-left));
