docs(pages): add new sponsorship entry

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -167,13 +167,15 @@ const headings = [
       { name: '边缘星2020 (byx2020.com)', platform: 'Alipay', amount: 50, date: '2025-11-01' },
       { name: '小哲', platform: 'Wechat', amount: 50, date: '2025-08-19' },
       { name: 'Open1V', platform: 'Wechat', amount: 2, date: '2025-08-14' },
+      { name: 'Luis Xu (不赌不毒不烟不酒)', platform: 'Alipay', amount: 5, date: '2025-08-03' },
       { name: '顾**', platform: 'Wechat', amount: 28, date: '2025-06-23' },
       { name: 'Hans J.Han', platform: 'Wechat', amount: 10, date: '2025-04-04' },
       { name: '**青', platform: 'Alipay', amount: 12, date: '2024-05-21' },
       { name: 'Anonymous', platform: 'Wechat', amount: 20, date: '2022-04-06' },
       { name: '华雄', platform: 'QQ', amount: 5, date: '2019-12-30' },
       { name: '◌', platform: 'QQ', amount: 3, date: '2019-12-30' },
-      { name: 'C*a (酷安@暴走の蜗牛)', amount: 2, date: '2019-07-02' }
+      // 酷安@暴走の蜗牛
+      { name: 'C*a', amount: 2, date: '2019-07-02' }
     ]}
   />
 </PageLayout>
