refactor(page): 调整简历页面细节

--- a/src/pages/resume/index.astro
+++ b/src/pages/resume/index.astro
@@ -26,31 +26,35 @@ const headings = [
     当时前后端都会参与，涵盖了商品、订单、支付、后台管理等核心模块，也是在这个阶段，对电商业务的整体流程和系统结构有了比较完整的认识。
   </p>
   <p>
-    2019 年，因为公司经营上的原因，我离职后加入了一家金融贷款公司，并在后续担任技术负责人，负责从 0
-    到 1 搭建一个跨境业务平台。
+    2019 年，因为公司经营上的原因，我离职后加入了一家金融贷款公司，并在后续担任技术负责人，负责从 <b
+      >0 到 1</b
+    > 搭建一个跨境业务平台。
   </p>
   <p>
     项目中主要围绕用户借贷业务展开，我负责系统整体架构设计以及核心模块的开发，包括用户体系、订单管理、资料采集、审核流程、风控、资金流转、后台运营与数据统计等。
   </p>
   <p>到 2022 年左右，业务逐步转向国内市场。</p>
-  <p>
-    这套系统除了公司内部使用，也对外提供过，大概有三十多家公司在使用。
-    系统长期稳定运行，整体累计产生的用户交易流水 过亿。
-  </p>
-  <p>框架基本都有接触，真正长期用于线上实战的主要是：</p>
+  <p>这套系统除了公司内部使用，也对外提供与<b>30+公司</b>使用。</p>
+  <p>系统长期稳定运行，整体累计产生的用户交易流水<b>过亿</b>。</p>
+  <p>大部分主流框架基本都有接触，真正长期用于线上实战的主要是：</p>
   <ul>
-    <li>ThinkPHP（早期）</li>
-    <li>Laravel（中期）</li>
-    <li>Webman（后期）</li>
+    <li><span class="mr-2 font-bold text-xs">早期</span>ThinkPHP</li>
+    <li><span class="mr-2 font-bold text-xs">中期</span>Laravel</li>
+    <li><span class="mr-2 font-bold text-xs">后期</span>Webman</li>
   </ul>
+  <p>前端以 <b>Vue</b> 为主</p>
   <p>
-    前端以 Vue 为主，移动端主要使用 Vant。
-    也接触过uni-app，只是之前的项目中有更合适的方案，因此没有实际投入线上。
+    移动端我会比较喜欢用 <b>Vant</b>，后台页面主要以 <b>Element Plus</b> 为主，最近也会比较喜欢 <b
+      >Naive UI</b
+    > 还有 <b>Vuetify</b>。
   </p>
-  <p>此外，我也做过一些 微信小程序 项目，复杂度不算高，但常见功能和业务逻辑都可以独立完成。</p>
+  <p>也接触过 <b>uni-app</b>，只是之前的项目中有更合适的方案，因此没有实际投入线上。</p>
   <p>
-    Python 和 Go
-    也都有所涉猎，作为主力开发语言可能不算擅长，但用于编写运维脚本、辅助工具或者解决特定问题都没有太大压力。
+    此外，在山东麦琪食品公司工作时也为其电商平台涉猎过 <b>微信小程序</b
+    >，复杂度不算高，但常见功能和业务逻辑都可以独立完成。
+  </p>
+  <p>
+    <b>Python</b> 和 <b>Go</b> 也都有所涉猎，虽主力开发语言可能不算擅长，但用于编写运维脚本、辅助工具或者解决特定问题都没有太大压力。
   </p>
 
   <h2 id='work'>合作方式</h2>
