--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -307,7 +307,7 @@ function isImageMetadata(obj: unknown): obj is ImageMetadata {
           <span class='text-xl font-semibold'>我的技术栈</span>
           <Button
             as='a'
-            href='/projects#direct-contact'
+            href='/resume'
             title='商务合作 · 外包开发 · 技术咨询'
             variant='ahead'
             class='ml-a text-sm not-prose bg-transparent'
