refactor(page): 修正简历页面

--- a/src/pages/resume/index.astro
+++ b/src/pages/resume/index.astro
@@ -68,6 +68,7 @@ const headings = [
   <p>相比固定的职位描述，我更看重事情本身，以及合作是否顺畅。</p>
   <p>如果是以兼职或外包形式合作，全天投入的价格大概在 600 / 天左右</p>
   <p>非全天投入、或者长期合作的情况，具体都可以再商量，我并不执着于一个固定数字。</p>
+  <p>另外，如果只是来咨询、讨论想法、交流问题（只要不占用我正式工作时间），我其实并不在意费用。真正的成长，往往来自于解决真实的问题，而不是纯粹的报酬。</p>
 
   <h2 id='resume'>简历</h2>
   <p>如果你更习惯从简历了解一个人，可以直接查看。</p>
